# PongInRayLib

./: PongGame.slnx  ShooterGame.slnx
PongGame/: CMakeLists.txt  PongGame.cpp  audio_player.h  ball.h  player.cpp  player.h
ShooterGame/: PongGame.cpp  ShooterGame.cpp  ShooterGame.vcxproj  ShooterGame.vcxproj.filters  audio_player.cpp  audio_player.h  ball.cpp  ball.h  player.cpp  player.h
ShooterGame/shaders/: crt.fs
